[gd_scene load_steps=12 format=3 uid="uid://cslwgipupmx3h"]

[ext_resource type="Script" uid="uid://c73w3d4ajkxpr" path="res://Scripts/Menus/death_menu.gd" id="1_bks0l"]
[ext_resource type="Texture2D" uid="uid://b54uosgp5y1vl" path="res://Aseprite/Menus/DeadMenu.png" id="1_i0hyx"]
[ext_resource type="Texture2D" uid="uid://cp2kqhd41rpns" path="res://Aseprite/Menus/PauseMenu/MainMenuButton/MainMenuButtonNotPressed.png" id="2_m1crm"]
[ext_resource type="Texture2D" uid="uid://c8ibuubi6ols5" path="res://Aseprite/Menus/PauseMenu/MainMenuButton/MainMenuButtonPressed.png" id="3_2b0uo"]
[ext_resource type="Texture2D" uid="uid://bvqys5sol42ni" path="res://Aseprite/Menus/PauseMenu/MainMenuButton/MainMenuButtonOver.png" id="4_fjw41"]
[ext_resource type="Texture2D" uid="uid://ckymuehbk27jq" path="res://Aseprite/Menus/PauseMenu/ExitButton/ExitButtonNotPressed.png" id="5_f1qhw"]
[ext_resource type="Texture2D" uid="uid://b7oasyff5qc5" path="res://Aseprite/Menus/PauseMenu/ExitButton/ExitButtonPressed.png" id="6_85crf"]
[ext_resource type="Texture2D" uid="uid://bclt2y7fch1gg" path="res://Aseprite/Menus/PauseMenu/ExitButton/ExitButtonOver.png" id="7_sfnkn"]

[sub_resource type="Animation" id="Animation_2wncx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseBackgroundColor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_msqga"]
resource_name = "death_intro_menu"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseBackgroundColor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.392157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kmuql"]
_data = {
&"RESET": SubResource("Animation_2wncx"),
&"death_intro_menu": SubResource("Animation_msqga")
}

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bks0l")

[node name="DeathBackgroundIntro" type="AnimationPlayer" parent="."]
process_mode = 3
root_node = NodePath("../CanvasLayer")
libraries = {
&"": SubResource("AnimationLibrary_kmuql")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2
layer = 4
visible = false

[node name="PauseBackgroundColor" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="PauseMenuControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/PauseMenuControl"]
position = Vector2(576, 328)
scale = Vector2(1.83333, 1.751)
texture = ExtResource("1_i0hyx")

[node name="MenuVBox" type="VBoxContainer" parent="CanvasLayer/PauseMenuControl/Sprite2D"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -55.0
offset_right = -112.0
offset_bottom = -221.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="CanvasLayer/PauseMenuControl/Sprite2D/MenuVBox"]
layout_mode = 2
texture_normal = ExtResource("2_m1crm")
texture_pressed = ExtResource("3_2b0uo")
texture_hover = ExtResource("4_fjw41")

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/PauseMenuControl/Sprite2D/MenuVBox"]
layout_mode = 2
texture_normal = ExtResource("5_f1qhw")
texture_pressed = ExtResource("6_85crf")
texture_hover = ExtResource("7_sfnkn")

[connection signal="pressed" from="CanvasLayer/PauseMenuControl/Sprite2D/MenuVBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenuControl/Sprite2D/MenuVBox/ExitButton" to="." method="_on_exit_button_pressed"]
